# recsys-group-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  mlflow_fresh.db  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  deploy-eks.yml  publish-image.yml
configs/: data_config.yaml  model_config.yaml  serving_compose.yaml  serving_config.yaml  training_config.yaml
configs/data_versions/: baseline.yaml  v1_strict_filter.yaml  v2_sliding_window.yaml  v3_train_plus_val.yaml
configs/model_profiles/: ggnn.yaml  srgnn.yaml  srgnn_att.yaml  srgnn_avg.yaml  srgnn_fc.yaml  srgnn_l.yaml  srgnn_ngc.yaml  tagnn.yaml
data/: raw.dvc  validation_report.json
data/interim/: .gitignore
data/processed/: data_stats.json
deployment/kubernetes/: api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  api-network-policy.yaml  api-pdb.yaml  api-service-account.yaml  api-service.yaml  grafana-datasources-configmap.yaml  grafana-deployment.yaml  grafana-ingress.example.yaml  grafana-pdb.yaml  grafana-service.yaml  karpenter-nodepool.yaml  karpenter-spot-nodepool.yaml  kustomization.yaml  namespace.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-pdb.yaml  prometheus-service.yaml  recsys-model-cache-pvc.yaml  recsys-model-prewarm-job.yaml  recsys-monitoring-secrets.example.yaml  recsys-secrets.example.yaml  recsys-serving-configmap.yaml
diagrams/: mlops-architecture.drawio  serving-detailed.drawio
docs/: api_contract.md  api_input_dictionary.md  data_contract.md  deployment.md  final_project_report.md  model_contract.md  monitoring.md  problem_definition.md  resource-sizing.md  serving.md  terraform.md
frontend/: DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
frontend/public/: _redirects
metrics/: best_model.json  evaluation_metrics.json  ingest_report.json  promotion_result.json  training_metrics.json
notebooks/: 01_eda_diginetica.ipynb  02_data_processing.ipynb
pipelines/: inference_pipeline.py  training_pipeline.py
scripts/: evaluate.py  export_dvc_stage_hashes.py  local_compose.sh  serve.py  smoke_test.sh  split_dvc_lock.py  train.py  verify_model_prewarm_rollout.sh
streamlit_app/: __init__.py  app.py
tests/: __init__.py
(+157 files in other folders)
