[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys"
version = "0.1.0"
description = "Session-based recommendation system scaffold for SR-GNN workflows"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=0.20",
    "pyarrow>=14.0",
    "pandera>=0.18",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "torch-geometric>=2.5",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "mlflow>=2.12",
    "dagshub>=0.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "dvc[s3]",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
monitoring = [
    "evidently>=0.6",
]

[project.scripts]
recsys-train = "recsys.training.pipeline:main"
recsys-serve = "recsys.serving.api:main"
recsys-process-data = "recsys.data.pipeline:main"
recsys-ct-promote = "recsys.training.ct_promote:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
